исправление стилизации - центрирование контента, растяжка фона

--- a/source/less/blocks/catalog/catalog-main.less
+++ b/source/less/blocks/catalog/catalog-main.less
@@ -1,13 +1,9 @@
-.catalog-main {
-  width: @mobile-width;
-  margin: 0 auto;
-}
-
 .catalog-main__heading {
   .page-heading;
-  padding-top: 27px;
-  padding-left: 20px;
-  margin-top: 0;
-  margin-bottom: 41px;
   color: @basic-black;
+  width: 258px;
+  padding-left: 20px;
+  padding-right: 42px;
+  margin: 27px auto;
+  margin-bottom: 49px;
 }
