--- a/source/less/blocks/catalog/extra-products.less
+++ b/source/less/blocks/catalog/extra-products.less
@@ -1,21 +1,20 @@
 .extra-products__heading {
+  font-family: @decor-font;
   font-size: 24px;
   line-height: 24px;
   font-weight: 400;
   color: @basic-black;
+  width: 301px;
+  padding-left: 19px;
+  margin: 0 auto;
   margin-bottom: 35px;
-  padding-left: 20px;
 }
 
 .extra-products__list {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-  margin-bottom: 39px;
-}
-
-.extra-products__item {
   .wrapper;
+  box-sizing: border-box;
+  list-style: none;
+  margin-bottom: 39px;
 }
 
 .extra-products__name {
@@ -43,7 +42,8 @@
 }
 
 .extra-products__wrapper {
-  .wrapper;
+  width: 280px;
+  margin: 0 auto;
   font-family: @base-font;
   font-size: 16px;
   line-height: 20px;
@@ -57,5 +57,6 @@
 
 .extra-products__text {
   width: 161px;
-  margin: 0 auto;
+  padding-left: 58px;
+  padding-right: 61px;
 }
