--- a/source/less/blocks/catalog/products-big-list.less
+++ b/source/less/blocks/catalog/products-big-list.less
@@ -1,5 +1,6 @@
 .products-big-list {
   .wrapper;
+  box-sizing: border-box;
   padding-top: 79px;
 }
 
@@ -20,7 +21,7 @@
 .products-big-list__link {
   .button;
   color: @special-dark-grey;
-  width: 91px;
+  width: 92px;
   padding: 20px 94px;
   margin-bottom: 25px;
   background-color: @basic-grey;
