--- a/source/less/blocks/general/address.less
+++ b/source/less/blocks/general/address.less
@@ -6,16 +6,17 @@
 
 .address__wrapper {
   .wrapper;
+  box-sizing: border-box;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .address__text {
+  .black-uppercase-text;
   font-size: 16px;
   line-height: 18px;
   color: @black-text;
-  text-transform: uppercase;
   width: 140px;
 }
 
