--- a/source/less/blocks/general/page-footer.less
+++ b/source/less/blocks/general/page-footer.less
@@ -1,12 +1,11 @@
 .page-footer {
-  width: @mobile-width;
-  margin: 0 auto;
   background-color: @bg-footer-grey;
   padding-bottom: 32px;
 }
 
 .page-footer__heading {
   .wrapper;
+  box-sizing: border-box;
   text-align: center;
   color: @black-text;
   text-transform: uppercase;
@@ -17,4 +16,5 @@
 .page-footer__social,
 .page-footer__copyright {
   .wrapper;
+  box-sizing: border-box;
 }
