--- a/source/less/blocks/general/page-header.less
+++ b/source/less/blocks/general/page-header.less
@@ -1,11 +1,6 @@
-.page-header {
-  margin: 0 auto;
-  width: @mobile-width;
-  position: relative;
-}
-
 .page-header__wrapper {
   .wrapper;
+  box-sizing: border-box;
   display: flex;
   align-items: center;
   padding-top: 12px;
