--- a/source/less/blocks/index/programs.less
+++ b/source/less/blocks/index/programs.less
@@ -1,5 +1,6 @@
 .programs {
   .wrapper;
+  box-sizing: border-box;
 }
 
 .programs__button {
@@ -8,6 +9,7 @@
   line-height: 18px;
   width: 192px;
   padding: 7px 44px;
+  margin: 0 auto;
   margin-bottom: 22px;
 }
 
