--- a/source/less/global/global.less
+++ b/source/less/global/global.less
@@ -7,7 +7,7 @@ body {
   min-height: 100%;
   margin: 0 auto;
   padding: 0;
-  font-family: @decor-font;
+  font-family: @base-font;
   font-size: 14px;
   font-weight: 400;
   color: @special-dark-grey;
