--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -28,11 +28,13 @@
 
 // mixin //
 .wrapper() {
-  width: 280px;
+  width: 320px;
   margin: 0 auto;
+  padding: 0 20px;
 }
 
 .page-heading() {
+  font-family: @decor-font;
   font-size: 36px;
   line-height: 36px;
   font-weight: 400;
@@ -45,6 +47,7 @@
 
 .button() {
   display: block;
+  font-family: @decor-font;
   font-size: 16px;
   line-height: 20px;
   text-align: center;
@@ -56,12 +59,14 @@
 }
 
 .black-uppercase-text() {
+  font-family: @decor-font;
   color: @basic-black;
   text-transform: uppercase;
   font-weight: 400;
 }
 
 .product-name() {
+  font-family: @decor-font;
   font-size: 16px;
   line-height: 20px;
   text-transform: uppercase;
