--- a/source/less/blocks/general/main-nav.less
+++ b/source/less/blocks/general/main-nav.less
@@ -1,10 +1,15 @@
 .main-nav {
+  .wrapper;
+  padding: 0;
+  font-family: @decor-font;
   font-size: 20px;
   line-height: 20px;
   font-weight: 500;
   color: @basic-black;
   text-transform: uppercase;
   text-align: center;
+  position: relative;
+  box-sizing: border-box;
 }
 
 .main-nav__toggle {
@@ -12,7 +17,7 @@
   border: none;
   width: 18px;
   height: 18px;
-  top: 20px;
+  top: -30px;
   right: 20px;
   cursor: pointer;
   background-color: transparent;
@@ -25,8 +30,7 @@
     width: 20px;
     height: 1px;
     top: 10px;
-    left: 1px;
-    right: 10px;
+    right: 0;
     cursor: pointer;
   }
 
