--- a/source/less/blocks/index/page-main.less
+++ b/source/less/blocks/index/page-main.less
@@ -1,22 +1,28 @@
-.page-main {
-  width: @mobile-width;
-  margin: 0 auto;
+.page-main__heading {
+  font-family: @decor-font;
+  color: @basic-white;
+  background-color: @green;
+  padding-top: 27px;
+  padding-bottom: 27px;
+  margin-bottom: 5px;
+  text-align: center;
 }
 
 .page-main__title {
-  color: @basic-white;
-  text-align: center;
-  background-color: @green;
-  padding-top: 27px;
-}
-
-.page-main__heading {
   .page-heading;
-  padding: 0 35px;
+  width: 249px;
+  padding-left: 36px;
+  padding-right: 35px;
+  margin: 0 auto;
+  margin-bottom: 25px;
 }
 
 .page-main__slogan {
   line-height: 14px;
   text-transform: uppercase;
-  padding-bottom: 29px;
+  width: 198px;
+  padding-left: 60px;
+  padding-right: 62px;
+  margin: 0 auto;
+  margin-bottom: 29px;
 }
