исправления по замечаниям

--- a/source/less/blocks/catalog/catalog-main.less
+++ b/source/less/blocks/catalog/catalog-main.less
@@ -1,9 +1,5 @@
 .catalog-main__heading {
-  .page-heading;
-  color: @basic-black;
-  width: 258px;
-  padding-left: 20px;
-  padding-right: 42px;
-  margin: 27px auto;
+  .heading(36px; 36px; @basic-black);
+  .wrapper;
   margin-bottom: 49px;
 }
