--- a/source/less/blocks/general/page-footer.less
+++ b/source/less/blocks/general/page-footer.less
@@ -1,20 +1,17 @@
 .page-footer {
-  background-color: @bg-footer-grey;
+  background-color: @basic-grey;
   padding-bottom: 32px;
 }
 
 .page-footer__heading {
   .wrapper;
-  box-sizing: border-box;
   text-align: center;
   color: @black-text;
   text-transform: uppercase;
-  padding-top: 39px;
-  padding-bottom: 32px;
+  padding: 39px 0 32px;
 }
 
 .page-footer__social,
 .page-footer__copyright {
   .wrapper;
-  box-sizing: border-box;
 }
