--- a/source/less/blocks/general/page-header.less
+++ b/source/less/blocks/general/page-header.less
@@ -1,9 +1,9 @@
 .page-header__wrapper {
   .wrapper;
-  box-sizing: border-box;
   display: flex;
   align-items: center;
   padding-top: 12px;
+  margin-bottom: 27px;
 }
 
 .page-header__logo {
