--- a/source/less/blocks/index/details.less
+++ b/source/less/blocks/index/details.less
@@ -1,11 +1,9 @@
 .details {
   .wrapper;
-  box-sizing: border-box;
 }
 
 .details__heading {
-  .page-heading;
-  line-height: 40px;
+  .heading(36px; 40px; @basic-black);
 }
 
 .details__list {
@@ -15,7 +13,7 @@
 }
 
 .details__item {
-  .description;
+  .description(14px; 18px; @special-dark-grey);
   padding-bottom: 26px;
   padding-left: 80px;
   position: relative;
