--- a/source/less/blocks/index/page-main.less
+++ b/source/less/blocks/index/page-main.less
@@ -1,28 +1,19 @@
 .page-main__heading {
-  font-family: @decor-font;
-  color: @basic-white;
+  .heading(14px; 14px; @basic-white);
   background-color: @green;
-  padding-top: 27px;
-  padding-bottom: 27px;
+  padding: 27px 0;
   margin-bottom: 5px;
   text-align: center;
 }
 
 .page-main__title {
-  .page-heading;
+  .heading(36px; 36px);
   width: 249px;
-  padding-left: 36px;
-  padding-right: 35px;
-  margin: 0 auto;
-  margin-bottom: 25px;
+  margin: 0 auto 25px;
 }
 
 .page-main__slogan {
-  line-height: 14px;
   text-transform: uppercase;
   width: 198px;
-  padding-left: 60px;
-  padding-right: 62px;
-  margin: 0 auto;
-  margin-bottom: 29px;
+  margin: 0 auto 29px;
 }
