--- a/source/less/blocks/index/programs.less
+++ b/source/less/blocks/index/programs.less
@@ -1,16 +1,15 @@
 .programs {
   .wrapper;
-  box-sizing: border-box;
+  .heading(16px; 16px; @basic-black);
+  .uppercase-text;
 }
 
 .programs__button {
-  .button;
-  font-size: 14px;
+  .button(14px);
   line-height: 18px;
-  width: 192px;
   padding: 7px 44px;
-  margin: 0 auto;
-  margin-bottom: 22px;
+  width: 280px;
+  margin-bottom: 29px;
 }
 
 .programs__list {
@@ -21,16 +20,12 @@
 
 .programs__card {
   background-color: @basic-grey;
-  padding-top: 25px;
-  padding-bottom: 20px;
-  padding-left: 20px;
+  padding: 25px 0 20px 20px;
   margin-bottom: 20px;
 }
 
 .programs__title {
-  .black-uppercase-text;
-  font-size: 24px;
-  line-height: 37px;
+  .heading(24px; 27px);
   margin-top: 0;
   margin-bottom: 20px;
   padding-left: 70px;
@@ -49,16 +44,13 @@
 }
 
 .programs__description {
-  .description;
+  .description(14px; 18px; @special-dark-grey);
   padding-right: 33px;
   margin-bottom: 39px;
 }
 
 .programs__link {
-  .black-uppercase-text;
   display: block;
-  font-size: 16px;
-  line-height: 16px;
   position: relative;
 
 
