--- a/source/less/blocks/catalog/products.less
+++ b/source/less/blocks/catalog/products.less
@@ -9,7 +9,6 @@
 
 .products__card {
   .wrapper;
-  box-sizing: border-box;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -29,7 +28,7 @@
 }
 
 .products__info {
-  .product-info;
+  .product-info(12px; 16px);
   margin-bottom: 22px;
   width: 140px;
 }
@@ -44,5 +43,6 @@
 
 .products__link {
   .button;
+  width: 280px;
   margin-bottom: 25px;
 }
