--- a/source/less/blocks/general/site-list.less
+++ b/source/less/blocks/general/site-list.less
@@ -10,6 +10,5 @@
 .site-list__item a {
   display: block;
   color: @basic-black;
-  padding-top: 22px;
-  padding-bottom: 24px;
+  padding: 22px 0 24px;
 }
