--- a/source/less/blocks/index/example-result.less
+++ b/source/less/blocks/index/example-result.less
@@ -2,17 +2,14 @@
   .wrapper;
   display: flex;
   flex-wrap: wrap;
-  justify-content: flex-start;
   margin-bottom: 30px;
-  box-sizing: border-box;
 }
 
 .example-result__item {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  width: 122px;
-  border-radius: 5px;
+  flex-wrap: wrap;
+  width: 124px;
   margin-right: 30px;
   margin-bottom: 25px;
 
@@ -22,23 +19,14 @@
 }
 
 .example-result__count {
-  .black-uppercase-text;
-  font-size: 24px;
-  line-height: 24px;
-  text-align: center;
+  .heading(24px; 24px; @basic-black);
+  .uppercase-text;
   padding-top: 14px;
   margin-top: 0;
 }
 
 .example-result__text {
-  font-family: @base-font;
-  font-size: 12px;
-  line-height: 12px;
-  text-align: center;
-  width: 60px;
-  margin-bottom: 0;
-  padding: 10px;
+  .description(12px; 12px; @special-dark-grey);
   background-color: @bg-grey;
-  position: absolute;
-  top: 260px;
+  padding: 0;
 }
