обновила клон форка, появились ошибки при запуске npm run build, добавила цвет шрифта заголовкам для соответствия с миксином - ошибки устранились

--- a/source/less/blocks/index/programs.less
+++ b/source/less/blocks/index/programs.less
@@ -25,7 +25,7 @@
 }
 
 .programs__title {
-  .heading(24px; 27px);
+  .heading(24px; 27px; @basic-black);
   margin-top: 0;
   margin-bottom: 20px;
   padding-left: 70px;
