--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -83,3 +83,10 @@
   line-height: @line-height;
   color: @special-dark-grey;
 }
+
+.form-font() {
+  font-family: @decor-font;
+  font-family: 16px;
+  font-size: 18px;
+  text-transform: uppercase;
+}
