--- a/source/less/style.less
+++ b/source/less/style.less
@@ -18,3 +18,5 @@
 @import "blocks/catalog/products.less";
 @import "blocks/catalog/products-big-list.less";
 @import "blocks/catalog/extra-products.less";
+@import "blocks/form/form-main.less";
+@import "blocks/form/form.less";
