--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -86,7 +86,7 @@
 
 .form-font() {
   font-family: @decor-font;
-  font-family: 16px;
-  font-size: 18px;
+  font-size: 16px;
+  line-height: 18px;
   text-transform: uppercase;
 }
