исправление стилизации формы

--- a/source/less/blocks/form/form-main.less
+++ b/source/less/blocks/form/form-main.less
@@ -1,16 +1,12 @@
 .form-main__heading {
-  .wrapper;
-  margin-bottom: 39px;
-}
-
-.form-main__title {
   .heading(36px; 36px; @basic-black);
+  .wrapper;
   margin-bottom: 37px;
-  width: 259px;
 }
 
 .form-main__text {
   .heading(14px; 18px; @basic-black);
+  .wrapper;
+  padding-right: 74px;
   text-transform: uppercase;
-  width: 226px;
 }
