--- a/source/less/blocks/form/form.less
+++ b/source/less/blocks/form/form.less
@@ -1,9 +1,9 @@
 .form {
-  .form-font;
   padding-bottom: 32px;
 }
 
 .form__item {
+  .form-font;
   border: none;
   margin: 0;
   padding: 20px 0;
@@ -36,11 +36,13 @@
   align-items: center;
 }
 
-.form__input {
+.form__field {
+  .form-font;
   border: 1px solid @grey-border-input;
   padding: 14px;
 
   &::placeholder {
+    .form-font;
     text-transform: uppercase;
   }
 
@@ -83,101 +85,117 @@
   margin-bottom: 20px;
 
   & label {
+    .form-font;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
   }
 }
 
-.form__radio,
+.form__radio {
+  .form-font;
+  display: none;
+
+  & + label {
+    position: relative;
+    padding-left: 46px;
+    cursor: pointer;
+  }
+
+  & + label::before {
+    position: absolute;
+    content: "";
+    border: 1px solid @special-grey;
+    cursor: pointer;
+    left: 0;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+  }
+
+  & + label::after {
+    display: none;
+    position: absolute;
+    content: "";
+    cursor: pointer;
+    width: 13px;
+    height: 13px;
+    border-radius: 50%;
+    left: 9px;
+    top: 3px;
+    background-color: @green;
+  }
+
+  &:checked + label::after {
+    display: block;
+  }
+}
+
 .form__checkbox {
+  .form-font;
   display: none;
-}
 
-.form__radio + label,
-.form__checkbox + label {
-  position: relative;
-  padding-left: 46px;
-  cursor: pointer;
-}
+  & + label {
+    position: relative;
+    padding-left: 46px;
+    cursor: pointer;
+  }
 
-.form__radio + label::before,
-.form__checkbox + label::before {
-  position: absolute;
-  content: "";
-  border: 1px solid @special-grey;
-  cursor: pointer;
-  left: 0;
-}
+  & + label::before {
+    position: absolute;
+    content: "";
+    border: 1px solid @special-grey;
+    cursor: pointer;
+    left: 0;
+    width: 26px;
+    height: 26px;
+  }
 
-.form__radio + label::before {
-  width: 30px;
-  height: 30px;
-  border-radius: 50%;
-}
+  & + label::after {
+    display: none;
+    position: absolute;
+    content: "";
+    cursor: pointer;
+    width: 7px;
+    height: 13px;
+    border: 2px solid transparent;
+    border-bottom: 2px solid @green;
+    border-right: 2px solid @green;
+    transform: rotate(45deg);
+    background-color: transparent;
+    left: 10px;
+    top: 0;
+  }
 
-.form__checkbox + label::before {
-  width: 26px;
-  height: 26px;
-}
-
-.form__radio + label::after,
-.form__checkbox + label::after {
-  display: none;
-  position: absolute;
-  content: "";
-  cursor: pointer;
-}
-
-.form__radio + label::after {
-  width: 13px;
-  height: 13px;
-  border-radius: 50%;
-  left: 9px;
-  top: 6px;
-  background-color: @green;
-}
-
-.form__checkbox + label::after {
-  width: 7px;
-  height: 13px;
-  border: 2px solid transparent;
-  border-bottom: 2px solid @green;
-  border-right: 2px solid @green;
-  transform: rotate(45deg);
-  background-color: transparent;
-  left: 10px;
-  top: 3px;
-}
-
-.form__radio:checked + label::after,
-.form__checkbox:checked + label::after {
-  display: block;
+  &:checked + label::after {
+    display: block;
+  }
 }
 
 .form__textarea {
-  .heading(16px; 18px; @special-dark-grey);
+  .form-font;
+  color: @special-dark-grey;
   width: 280px;
   height: 150px;
   border: 1px solid @grey-border-input;
   padding: 13px 12px 0 15px;
 
   &::placeholder {
+    .form-font;
     text-transform: uppercase;
   }
 }
 
 .form__footer {
+  .wrapper;
   text-align: center;
 }
 
 .form__button {
   .button;
-  font-family: @decor-font;
   font-weight: 400;
   width: 280px;
   border: none;
-  display: inline-block;
   padding: 7px 44px;
   margin-bottom: 20px;
 }
