--- a/source/less/blocks/general/main-nav.less
+++ b/source/less/blocks/general/main-nav.less
@@ -9,6 +9,22 @@
   text-transform: uppercase;
   text-align: center;
   position: relative;
+
+  @media (min-width: @tablet-width) {
+    width: 440px;
+    padding: 0;
+    margin: 0;
+    font-size: 18px;
+    line-height: 24px;
+    font-weight: 400;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 720px;
+    font-size: 20px;
+    line-height: auto;
+    background-color: @green;
+  }
 }
 
 .main-nav__toggle {
@@ -39,5 +55,9 @@
 
   &::after {
     transform: rotate(-45deg);
+  }
+
+  @media (min-width: @tablet-width) {
+    display: none;
   }
 }
