--- a/source/less/blocks/general/site-list.less
+++ b/source/less/blocks/general/site-list.less
@@ -5,10 +5,38 @@
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
+
+  @media (min-width: @tablet-width) {
+    width: 440px;
+    flex-direction: row;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 720px;
+    padding: 69px 110px 32px 132px;
+  }
+}
+
+.site-list__item {
+  @media (min-width: @tablet-width) {
+    margin-right: 35px;
+
+    &:last-child {
+      margin-right: 0;
+    }
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-right: 32px;
+  }
 }
 
 .site-list__item a {
   display: block;
   color: @basic-black;
   padding: 22px 0 24px;
+
+  @media (min-width: @desktop-width) {
+    color: @basic-white;
+  }
 }
