--- a/source/less/blocks/index/slider.less
+++ b/source/less/blocks/index/slider.less
@@ -1,12 +1,29 @@
 .slider {
   .wrapper;
   padding-bottom: 25px;
+
+  @media (min-width: @tablet-width) {
+    background-color: @bg-grey;
+    width: 768px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 690px;
+    margin: 0;
+    padding: 0;
+  }
 }
 
 .slider__list {
   list-style: none;
   padding: 0;
   margin: 0;
+}
+
+.slider__item {
+  @media (min-width: @tablet-width) {
+    text-align: center;
+  }
 }
 
 .slider__item--after {
