исправила название класса в примере, заменила ширину на переменную, убрала отступы в декстопной версии

--- a/source/less/blocks/general/page-header.less
+++ b/source/less/blocks/general/page-header.less
@@ -24,14 +24,13 @@
   margin-bottom: 27px;
 
   @media (min-width: @tablet-width) {
-    width: 174px;
+    flex: 1 0 0;
     margin: 0;
     padding: 0;
     margin-right: 94px;
   }
 
   @media (min-width: @desktop-width) {
-    width: 202px;
     margin-right: 408px;
     padding-top: 53px;
   }
