--- a/source/less/blocks/index/page-main.less
+++ b/source/less/blocks/index/page-main.less
@@ -27,6 +27,7 @@
   @media (min-width: @desktop-width) {
     margin-bottom: 40px;
     margin-left: 190px;
+    margin-right: 0;
   }
 }
 
@@ -45,5 +46,6 @@
 
   @media (min-width: @desktop-width) {
     margin-left: 190px;
+    margin-right: 0;
   }
 }
