--- a/source/less/blocks/index/programs.less
+++ b/source/less/blocks/index/programs.less
@@ -2,6 +2,10 @@
   .wrapper;
   .heading(16px; 16px; @basic-black);
   .uppercase-text;
+
+  @media (min-width: @desktop-width) {
+    margin: 0;
+  }
 }
 
 .programs__button {
