--- a/source/less/blocks/general/address.less
+++ b/source/less/blocks/general/address.less
@@ -15,8 +15,10 @@
   }
 
   @media (min-width: @desktop-width) {
-    padding: 66px 89px 51px 76px;
+    padding: 0;
+    width: 570px;
     margin-left: 110px;
+    margin-right: 760px;
   }
 }
 
