--- a/source/less/blocks/general/page-footer.less
+++ b/source/less/blocks/general/page-footer.less
@@ -13,6 +13,10 @@
     padding-top: 55px;
     padding-bottom: 61px;
   }
+
+  @media (min-width: @desktop-width) {
+    margin: 0;
+  }
 }
 
 .page-footer__heading {
