--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -21,13 +21,14 @@
 @decor-font: "Oswald", @base-font;
 
 // viewports //
+@mobile-width: 320px;
 @mobile-width-only: 767px;
 @tablet-width: 768px;
 @desktop-width: 1440px;
 
 // mixin //
 .wrapper() {
-  width: 320px;
+  width: @mobile-width;
   margin: 0 auto;
   padding: 0 20px;
 
