добавила высоту карте, убрала нулевые марджины, убрала лишний марджин в адресе

--- a/source/less/blocks/general/address.less
+++ b/source/less/blocks/general/address.less
@@ -18,7 +18,6 @@
     padding: 0;
     width: 570px;
     margin-left: 110px;
-    margin-right: 760px;
   }
 }
 
@@ -45,5 +44,15 @@
     .description(16px; 20px; @special-dark-grey);
     width: 159px;
     text-align: right;
+  }
+}
+
+.address__map {
+  @media (min-width: @mobile-width) {
+    height: 362px;
+  }
+
+  @media (min-width: @tablet-width) {
+    height: 400px;
   }
 }
