--- a/source/less/blocks/general/site-list.less
+++ b/source/less/blocks/general/site-list.less
@@ -7,13 +7,14 @@
   flex-wrap: wrap;
 
   @media (min-width: @tablet-width) {
-    width: 440px;
     flex-direction: row;
   }
 
   @media (min-width: @desktop-width) {
-    width: 720px;
-    padding: 69px 110px 32px 132px;
+    width: 100%;
+    padding-top: 69px;
+    padding-right: 110px;
+    padding-left: 132px;
   }
 }
 
