--- a/source/less/blocks/index/programs.less
+++ b/source/less/blocks/index/programs.less
@@ -1,5 +1,4 @@
 .programs {
-  .wrapper;
   .heading(16px; 16px; @basic-black);
   .uppercase-text;
 }
@@ -9,25 +8,24 @@
   line-height: 18px;
   padding: 7px 44px;
   width: 280px;
-  margin-bottom: 29px;
+  margin: 0 auto 29px;
 
   @media (min-width: @tablet-width) {
     font-size: 20px;
     width: 244px;
     padding: 14px 26px;
-    margin-left: 83px;
+    margin-left: 112px;
   }
 
   @media (min-width: @desktop-width) {
     margin-bottom: 267px;
-    margin-left: 80px;
+    margin-left: 190px;
   }
 }
 
 .programs__list {
+  .wrapper;
   list-style: none;
-  padding: 0;
-  margin: 0;
 
   @media (min-width: @desktop-width) {
     display: flex;
