--- a/source/less/blocks/general/copyright.less
+++ b/source/less/blocks/general/copyright.less
@@ -4,6 +4,7 @@
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
+  width: 280px;
 
   &::after {
     content: "";
@@ -11,5 +12,9 @@
     width: 27px;
     height: 34px;
     background-color: @grey-icon;
+  }
+
+  @media (min-width: @tablet-width) {
+    width: 163px;
   }
 }
