--- a/source/less/blocks/general/main-nav.less
+++ b/source/less/blocks/general/main-nav.less
@@ -1,5 +1,4 @@
 .main-nav {
-  .wrapper;
   padding: 0;
   font-family: @decor-font;
   font-size: 20px;
@@ -11,19 +10,17 @@
   position: relative;
 
   @media (min-width: @tablet-width) {
-    width: 440px;
-    padding: 0;
-    margin: 0;
     font-size: 18px;
     line-height: 24px;
     font-weight: 400;
+    width: 440px;
   }
 
   @media (min-width: @desktop-width) {
-    width: 720px;
     font-size: 20px;
     line-height: auto;
     background-color: @green;
+    width: 50%;
   }
 }
 
