--- a/source/less/blocks/general/page-footer.less
+++ b/source/less/blocks/general/page-footer.less
@@ -1,14 +1,17 @@
 .page-footer {
   background-color: @basic-grey;
+}
+
+.page-footer__wrapper {
+  .wrapper;
   padding-bottom: 32px;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: center;
 
   @media (min-width: @tablet-width) {
-    .wrapper;
     flex-direction: row;
     padding-top: 55px;
     padding-bottom: 61px;
@@ -16,7 +19,6 @@
 }
 
 .page-footer__heading {
-  .wrapper;
   text-align: center;
   color: @black-text;
   text-transform: uppercase;
@@ -24,40 +26,14 @@
 
   @media (min-width: @tablet-width) {
     width: 128px;
-    padding: 0;
-    margin: 0;
-    margin-right: 156px;
     text-align: left;
-  }
-
-  @media (min-width: @desktop-width) {
-    margin-right: 413px;
+    padding: 0;
+    margin-bottom: 0;
   }
 }
 
 .page-footer__social {
-  .wrapper;
-
   @media (min-width: @tablet-width) {
     width: 129px;
-    padding: 0;
-    margin: 0;
-    margin-right: 131px;
-    padding-top: 55px;
-    padding-bottom: 61px;
-  }
-
-  @media (min-width: @desktop-width) {
-    margin-right: 387px;
-  }
-}
-
-.page-footer__copyright {
-  .wrapper;
-
-  @media (min-width: @tablet-width) {
-    width: 163px;
-    padding: 0;
-    margin: 0;
   }
 }
