--- a/source/less/blocks/general/page-header.less
+++ b/source/less/blocks/general/page-header.less
@@ -5,14 +5,20 @@
   justify-content: flex-start;
 
   @media (min-width: @tablet-width) {
-    .wrapper;
     flex-direction: row;
+  }
+}
+
+.page-header__container {
+  @media (min-width: @tablet-width) {
+    .wrapper;
+    display: flex;
+    flex: wrap;
   }
 
   @media (min-width: @desktop-width) {
-    padding-right: 0;
-    margin-bottom: 111px;
-    align-items: flex-start;
+    padding: 0;
+    width: 100%;
   }
 }
 
@@ -25,14 +31,14 @@
 
   @media (min-width: @tablet-width) {
     flex: 1 0 0;
-    margin: 0;
     padding: 0;
-    margin-right: 94px;
+    margin: 0;
+    display: flex;
+    flex-wrap: wrap;
   }
 
   @media (min-width: @desktop-width) {
-    margin-right: 408px;
-    padding-top: 53px;
+    padding-left: 110px;
   }
 }
 
