--- a/source/less/blocks/index/details.less
+++ b/source/less/blocks/index/details.less
@@ -1,9 +1,5 @@
-.details {
+.details__wrapper {
   .wrapper;
-
-  @media (min-width: @desktop-width) {
-    padding-right: 0;
-  }
 }
 
 .details__heading {
@@ -11,7 +7,7 @@
 
   @media (min-width: @tablet-width) {
     .heading(60px; 60px; @basic-black);
-    margin-bottom: 32px;
+    margin-bottom: 0;
   }
 }
 
@@ -21,24 +17,22 @@
   margin: 0;
 
   @media (min-width: @tablet-width) {
-    width: 633px;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: flex-start;
   }
-
-  @media (min-width: @desktop-width) {
-    width: 1224px;
-    margin-right: 106px;
-  }
 }
 
 .details__item {
   .description(14px; 18px; @special-dark-grey);
-  padding-bottom: 26px;
-  padding-left: 80px;
   position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  padding-left: 80px;
+  margin-bottom: 20px;
 
   &::before {
     position: absolute;
@@ -51,55 +45,31 @@
 
   @media (min-width: @tablet-width) {
     .description(16px; 24px; @special-dark-grey);
+    flex-direction: column;
+    padding-top: 160px;
     padding-left: 0;
-    padding-top: 110px;
-    margin-bottom: 37px;
+    margin-right: 140px;
+    flex: 1;
 
-    &:first-child {
-      width: 230px;
-      margin-right: 153px;
-    }
-
-    &:nth-child(2) {
-      width: 246px;
-    }
-
-    &:nth-child(3) {
-      width: 247px;
-      margin-right: 137px;
-    }
-
-
-    &:nth-child(4) {
-      width: 249px;
+    &:nth-child(2n) {
+      margin-right: 85px;
     }
 
     &::before {
-      top: 30px;
+      width: 80px;
+      height: 80px;
+      left: 0;
+      top: 60px;
+      margin-bottom: 30px;
     }
   }
 
   @media (min-width: @desktop-width) {
-    &:first-child {
-      margin-right: 94px;
-    }
+    margin-right: 77px;
+    flex: 1;
 
-    &:nth-child(2) {
-      margin-right: 79px;
-    }
-
-    &:nth-child(3) {
-      width: 247px;
-      margin-right: 77px;
-    }
-
-
-    &:nth-child(4) {
-      width: 249px;
-    }
-
-    &::before {
-      top: 30px;
+    &:nth-child(4n) {
+      margin-right: 0;
     }
   }
 }
