--- a/source/less/blocks/general/site-list.less
+++ b/source/less/blocks/general/site-list.less
@@ -11,6 +11,7 @@
   }
 
   @media (min-width: @desktop-width) {
+    justify-content: space-between;
     width: 100%;
     padding-top: 69px;
     padding-right: 110px;
