адаптивная сетка каталога

--- a/source/less/blocks/catalog/catalog-main.less
+++ b/source/less/blocks/catalog/catalog-main.less
@@ -2,4 +2,10 @@
   .heading(36px; 36px; @basic-black);
   .wrapper;
   margin-bottom: 49px;
+
+  @media (min-width: @tablet-width) {
+    .heading(60px; 60px; @basic-black);
+    margin-top: 60px;
+    margin-bottom: 83px;
+  }
 }
