--- a/source/less/blocks/general/main-nav.less
+++ b/source/less/blocks/general/main-nav.less
@@ -21,6 +21,10 @@
     line-height: auto;
     background-color: @green;
     width: 50%;
+
+    &--casual {
+      background-color: @basic-white;
+    }
   }
 }
 
