--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -79,9 +79,9 @@
   font-weight: 400;
 }
 
-.product-name(@line-height: 20px;) {
+.product-name(@font-size; @line-height) {
   font-family: @decor-font;
-  font-size: 16px;
+  font-size: @font-size;
   line-height: @line-height;
   text-transform: uppercase;
   font-weight: 400;
