--- a/source/less/blocks/catalog/products-big-list.less
+++ b/source/less/blocks/catalog/products-big-list.less
@@ -1,15 +1,56 @@
 .products-big-list {
   .wrapper;
   padding-top: 79px;
+
+  @media (min-width: @tablet-width) {
+    width: 324px;
+    padding: 111px 0 38px;
+    margin: 0;
+    position: absolute;
+    top: 1374px;
+    left: 414px;
+    border: 2px solid @basic-grey;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 245px;
+    padding: 115px 0 40px;
+    margin: 0;
+    position: absolute;
+    top: 456px;
+    left: 1085px;
+    border: 2px solid @basic-grey;
+  }
 }
 
 .products-big-list__text {
   .product-info(12px; 16px);
   text-align: center;
 
+  @media (min-width: @tablet-width) {
+    .product-info(16px; 18px);
+    padding: 0 75px;
+    margin-bottom: 82px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding: 0 29px;
+    margin-bottom: 72px;
+  }
+
   &--bold {
     .heading(16px; 20px; @black-text);
     .uppercase-text;
+
+    @media (min-width: @tablet-width) {
+      .heading(20px; 22px; @black-text);
+      padding: 0 90px;
+      margin-bottom: 23px;
+    }
+
+    @media (min-width: @desktop-width) {
+      padding: 0 35px;
+    }
   }
 }
 
@@ -20,4 +61,16 @@
   padding: 20px 94px;
   margin-bottom: 25px;
   background-color: @basic-grey;
+
+  @media (min-width: @tablet-width) {
+    width: 249px;
+    line-height: 0;
+    padding: 20px 79px;
+    margin: 0 auto;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 169px;
+    padding: 20px 39px;
+  }
 }
