--- a/source/less/blocks/general/page-header.less
+++ b/source/less/blocks/general/page-header.less
@@ -19,6 +19,10 @@
   @media (min-width: @desktop-width) {
     padding: 0;
     width: 100%;
+
+    &--casual {
+      padding-top: 53px;
+    }
   }
 }
 
